2008-02-21  Stefan Jahn  <stefan@lkcc.org>

	* rfedd.cpp: Implemented H-, G- and A- parameters.

2008-02-20  Stefan Jahn  <stefan@lkcc.org>

	* rfedd.cpp: Using extended MNA entries for AC analysis when
	specifying S- or Z-parameters.  Allowing zero-frequency evaluation
	for DC analysis.

2008-02-18  Stefan Jahn  <stefan@lkcc.org>

	* rfedd.cpp: Obtaining the real equation variable reference name
	instead of constructing the equation name ourselves.

2008-02-17  Stefan Jahn  <stefan@lkcc.org>

	* rfedd.cpp: Added preliminary implementation of an equation
	defined RF device.

2008-01-25  Stefan Jahn  <stefan@lkcc.org>

	* devices/thyristor.cpp, devices/triac.cpp: Small fixes in
	implementation.

2008-01-24  Stefan Jahn  <stefan@lkcc.org>

	* devices/thyristor.cpp, devices/triac.cpp: Added preliminary
	implementations of thyristor and triac.

2008-01-18  Stefan Jahn  <stefan@lkcc.org>

	* devices/diac.cpp: Fixed memory leak by using new
	setInternalNode() function of the circuit class.

2008-01-16  Stefan Jahn  <stefan@lkcc.org>

	* devices/diac.cpp: Parameterized the Diac a bit more.  Added some
	properties.

2008-01-15  Stefan Jahn  <stefan@lkcc.org>

	* devices/diac.cpp: Fixed implementation of Diac.  Works now also
	for transient simulation.

2008-01-02  Stefan Jahn  <stefan@lkcc.org>

	* devices/diac.h (class diac): Added preliminary diac
	implementation.

2007-10-23  Stefan Jahn  <stefan@lkcc.org>

	* ifile.h (class ifile): Added new file based current source.

2007-10-21  Stefan Jahn  <stefan@lkcc.org>

	* vfile.cpp: Implemented new voltage gain (G) and delay time (T)
	properties.

2007-09-25  Stefan Jahn  <stefan@lkcc.org>

	* devices/eqndefined.cpp: Fixed result interpretation for non-real
	valued equation results (i.e. complex when e.g. using sqrt).

2007-09-04  Stefan Jahn  <stefan@lkcc.org>

	* devices/eqndefined.cpp: Reducing number of equation evaluations
	using the new 'skip' feature of the equation solver on the one